# agentic_context_compaction

./: README.md  pyproject.toml
context_compactor/: __init__.py
context_compactor/adapters/: openai_agents.py  pydantic_ai.py
context_compactor/core/: __init__.py  compactor.py
